--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -126,12 +126,15 @@ succulents		-0.0025 6.736 -0.0217 6.736
 
 #=============================================================
 #                 Cheatgrass inputs
-# NOTE: 
-# ignition = cheatgrass biomass ignition in 1*1 m2 plot; When < 12.05 the wild fire will occur randomly; 
-            # when = 12.05 the fire yearly possibility will related with cheatgrass biomass; 
-            # When = 0 there will be no wild fire happen.  
-# cheatgrass_coefficient 
-# wild_fire_slope = slope of fire yearly possibility & cheatgrass biomass
+# 
+# ignition = cheatgrass biomass (g/m2) required to ignite a fire.
+# cheatgrass_coefficient = intercept of the cheatgrass biomass-fire probability equation
+# wild_fire_slope = slope of the cheatgrass biomass-fire probability equation
+# all three parameters were derived from Fig. 2 of Whisenant et al. 1990 Changing fire 
+# frequencies on Idaho's Snake River Plains: ecological and management implications
+# when ignition = 12.05, the cheatgrass-wildfire positive feedback loop is utilized, such that
+# greater cheatgrass biomass results into a higher fire probability.
+# To turn off the cheatgrass-wildfire loop, set ignition = 0.0.  
 # ignition cheatgrass_coefficient wild_fire_slope  
   12.05    -0.117                 0.0093    
 
