--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -34,12 +34,12 @@
 # killyr = kill all members of this group at end of this year.
 #          0 == don't kill
 # killfreq_startyr = start year for killing due to fire, which will continue at the specified kill frequency
-# Prescribed_killfreq = frequency to kill. 
-#            if > 1 yearly interval, only prescribed fire occur after killfreq_startyr. Must be set to a floating point
+# Prescribed_killfreq = frequency at which to implement prescribed fire.
+#            if > 1 , a yearly interval at which prescribed fire will occur after killfreq_startyr. Must be set to a floating point
 #			 number: xx.x, 10.0. 
-#            if 0 < Prescribed_killfrq < 1 yearly possibility, occur  with the wild fire whose parameters are below.
+#            if < 1 , then prescribed fire will occur randomly based on the fire probability specified with return interval 1/Prescribed_killfreq 
 #            if = 0 no prescribed fire. 
-#            Overrides killyr.
+#            Overrides killyr. These two options are obviously mutually exclusive. In addition, these options are mutually exclusive with the wildfire-cheatgrass option specified below.
 # extirp = year at which all group members are extirpated
 #       (without recovery) from the plot. 0==don't use, >0 == year # 
 # mort =  switch to allow age-independent/slowgrowth mortality
@@ -65,16 +65,16 @@
 #TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
 
 # name     space  density maxest slow stretch xres  estann  on  startyr xgrow  veg_prod_type  killyr killfreq_startyr Prescribed_killfreq   extirp  mort    proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr  ignition cheatgrass_coefficient wild_fire_slope 
- sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1     0.00000   2  0      1       0    0     1    1.00  0.00 0  0.00  0 
- a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      1       0    0     1    1.00  0.00 0  0.00  0  
- a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      1       0    0     1    1.00  0.00 0  0.00  0  
- p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      1       0    0     1    1.00  0.40 0  0.24  0  
- p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      1       0    0     1    1.00  0.40 0  0.24  0   
- a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1     0.00000   3  0      1       0    0     1    1.00  0.00 0  0.24  0  
- p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1     0.00000   3  0      1       0    0     1    1.00  0.70 0  0.24  0  
- p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.00000   3  0      1       0    0     1    1.00  0.70 0  0.24  0 
- shrub         0.090  1.0000   1  0.0500   2     1       0   1      1     0.00000   2  0      1       0    0     1    1.00  0.00 0  0.24  0 
- succulents    0.030  0.3100   1  0.0500   8     1       0   1      1     0.00000   2  0      1       0    0     1    1.00  0.00 0  0.24  0
+ sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1     0.00000   2  0      0       0    0     1    1.00  0.00 0  0.00  0 
+ a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      0       0    0     1    1.00  0.00 0  0.00  0  
+ a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      0       0    0     1    1.00  0.00 0  0.00  0  
+ p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      0       0    0     1    1.00  0.40 0  0.24  0  
+ p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1     0.00000   4  0      0       0    0     1    1.00  0.40 0  0.24  0   
+ a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1     0.00000   3  0      0       0    0     1    1.00  0.00 0  0.24  0  
+ p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1     0.00000   3  0      0       0    0     1    1.00  0.70 0  0.24  0  
+ p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.00000   3  0      0       0    0     1    1.00  0.70 0  0.24  0 
+ shrub         0.090  1.0000   1  0.0500   2     1       0   1      1     0.00000   2  0      0       0    0     1    1.00  0.00 0  0.24  0 
+ succulents    0.030  0.3100   1  0.0500   8     1       0   1      1     0.00000   2  0      0       0    0     1    1.00  0.00 0  0.24  0
 # a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1     0.00000   3   
 
 [end]  # section end
@@ -125,8 +125,9 @@ succulents		-0.0025 6.736 -0.0217 6.736
 [end]  # section end
 
 #=============================================================
-#                 Cheatgrass inputs
-# 
+#                 Cheatgrass-Wildfire Inputs
+# These inputs allow for the implementation of wildfire based on cheatgrass biomass (g/m2)
+# This option cannot be used if prescribed fire is on. The prescribed fire and wildfire options are mutually exclusive
 # ignition = cheatgrass biomass (g/m2) required to ignite a fire.
 # cheatgrass_coefficient = intercept of the cheatgrass biomass-fire probability equation
 # wild_fire_slope = slope of the cheatgrass biomass-fire probability equation
