(Issue #153) Move GROWING_BASE_TEMP from sxw.h to env.in

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/env.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/env.in
@@ -35,9 +35,19 @@
 # std = (centigrade) standard deviation
 # max = maximum truncate value
 # min = minimum truncate value
+# gstemp = base-temperature in degree Celsius. Months with a mean
+#          temperature >= base are contributing to growing season
+#          precipitation:
+#          Coffin & Lauenroth 1990 Ecological Modelling:
+#            * growing season at CPER is 1 April - 30 September
+#            * growing season ppt = 0.86 * annual ppt at CPER
+#          A base of 5 C will on average include April - October for
+#          Fort Collins recent climate
+#          A base of 4.4 C as described in Sims et al. 1978 Journal of
+#          Ecology
 
-# avg  std  min  max
-  5.9 1.0  -22  22
+# avg  std  min  max  gstemp
+  5.9  1.0  -22  22   4.4
 
 # -------------------------------------------------------------
 # disturbance probabilities = probability of occurrance per year
