--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -5,6 +5,12 @@
 # Blank lines, white space, and comments may be used freely,
 # however, the order of input is important
 
+# These values determine the memory allocated for resource groups and resource group names.
+# If these limits are exceeded, memory leaks will result.
+
+10 # Maximum resource groups allowed.
+15 # Maximum resource group name length.
+
 ####################################################
 # All-group parameters:
 # NOTE: only 10 RGs can be established at a time. Below there are 11 RG possibilities. One always has
