Update description of "wet" parameter throughout, resolves issue #260
This commit changes the conceptual defintion of "wet" - rather than representing the PPT value that defines a wet year, we are now defining "wet" as a PPT threshold, above which succulent growth declines and succulent mortality increases.

This commit resolves issue #260.

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/env.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/env.in
@@ -12,8 +12,10 @@
 # std = (mm) standard deviation
 # min = truncate to this minimum
 # max = truncate to this maximum
-# dry = ppt <= this is treated as a dry year (eqn 3)
-# wet = ppt >= this is treated as a wet year (eqn 4)
+# dry = ppt (mm) <= this is treated as a dry year (eqn 3)
+# wet = ppt (mm) threshold that represents wet conditions. PPT values above this 
+#       threshold inhibit the growth of succulents and result in increased 
+#       succulent mortality (eqn 4)
 #       anything between "dry" and "wet" is considered average
 # gsppt = proportion of ppt occuring during growing season
 # transp_window = integer between 1 and 30. Calculates the average
