(Issue #225) Moved constants from model.in to maxgroupspecies.in

--- a/testing.sagebrush.master/Stepwat_Inputs/files.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/files.in
@@ -17,3 +17,5 @@ Output/mortpre.csv	#output
 Output/mortavg.csv	#output
 
 Input/sxw.in
+
+Input/maxrgroupspecies.in #Determine the memory allocated for resource groups, species, and their names
