(issue #279) added .vscode to the gitignore
Not really a gridded code issue but it has been annoying me.

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ nbproject/private/Default.properties
 nbproject/private/launcher.properties
 nbproject/private/private.xml
 nbproject/project.xml
+
+# VScode project files
+######################
+.vscode
