--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -64,7 +64,7 @@
 # space parameter for shrubs was a guess (KP) 
 #TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
 
-# name     space  density maxest slow stretch xres  estann  on  startyr xgrow  veg_prod_type  killyr killfreq_startyr Prescribed_killfreq   extirp  mort    proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr  ignition cheatgrass_coefficient wild_fire_slope 
+# name     space  density maxest slow stretch xres  estann  on  startyr xgrow  veg_prod_type  killyr killfreq_startyr Prescribed_killfreq   extirp  mort    proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr 
  sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1     0.10000   2  0      0       0    0     1    1.00  0.00 0  0.00  0 
  a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1     0.20000   4  0      0       0    0     1    1.00  0.00 0  0.24  0  
  a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1     0.20000   4  0      0       0    0     1    1.00  0.00 0  0.24  0  
