--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ nbproject/private/Default.properties
 nbproject/private/launcher.properties
 nbproject/private/private.xml
 nbproject/project.xml
+
+# CLion project files
+cmake-build-debug/*
+.idea/*
+CMakeLists.txt
