--- a/testing.sagebrush.master/files.in
+++ b/testing.sagebrush.master/files.in
@@ -11,6 +11,7 @@ Grid_Inputs/grid_seed_dispersal.in	# name of grid seed dispersal setup file
 Grid_Inputs/grid_initSpecies.csv	# name of grid species input file
 
 files.in				# name of stepwat files.in file
+Input/maxrgroupspecies.in     # name of stepwat maxrgroupspecies.in file
 
 Output/g_bmassavg			# name of the prefix given to the biomass output files
 Output/g_mortavg			# name of the prefix given to the mortuary output files
