Modified initialization parameters
These changes make inputs easier to specify. They remove the boolean options and replace them with a string parameter that represents which type of initialization we would like. They also add some error checking to grid_initSpecies via _run_spinup. This commit is aimed at issue #328, but also modifies spinup (issue #300).

In grid_setup.in:
* added initialization parameter with an explaination of what options are valid.

in grid_seed_dispersal.in:
* removed option 1a, 1b, 2a, and 2b

in ST_main.c:
* added InitializationMethod as global variable. This follows the pattern ofother global variables even though the variable is only used in ST_grid.c.

in ST_globals.h:
* added InitializationMethod as externed variable.

in ST_grid.c:
* Renamed species_seed_avail to shouldBeInitialized. I did this to make the name of the variable more closely match it's purpose. The variable lists whether or not each species should be included in spinup or initial seed dispersal, so I renamed it accordingly.
* Added an initialization type enumerator for the three different ways we can initialize the cells.
* Removed the variables sd_Option1a, 1b, 2a, and 2b. They are no longer needed because of the new InitializationMethod variable.
* Modified the general info print block to reflect the new InitializationMethod variable as well as the removal of sd_option1a and so forth.
* Began using InitializationMethod in place of the former options. It makes the code more readable.
* To compensate for the removal of sd_option2a and 2b I added some error checking to _run_spinup. If the user requests spinup for a given cell but no species are turned on for spinup the program now prints a log warning.

--- a/testing.sagebrush.master/Grid_Inputs/grid_seed_dispersal.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_seed_dispersal.in
@@ -8,11 +8,5 @@
 1		# output header (ie. the names of all the species)?  1 means yes, 0 means no.  Suggested: yes, as it's hard to figure out what all the numbers mean elsewise.
 ,		# output seperator... specify one of the following as a separator: t = tab, s = space, or any single character such as , | : etc (excluding '#','t', and 's').  Suggested: tab.
 
-#Spinup and Seed Availability options
-#NOTE: options 1a, 2a, and Xb are mutually exclusive.  Options 1b and 2b can be combined.  Cells can be empty of plants.
-10		# option 1) number of years N at the beginning of the simulation during which seeds are available for germination.  Input: N years.
-0		# option 1a) all cells and species.  1 means yes, 0 means no.
-0		# option 1b) input for each cell: seeds of which species are available during those first N years [names & order of all species in species.in].  1 means yes, 0 means no.
-# option 2) run one site without dispersal (ie, conditions of 1-site StepWat, ie, seeds available in every cell for every year) for inputted # of years x replications (eg, 500 years times 10 replications) as spinup
-1		# option 2a) use this spinup as init condition in all cells.  1 means yes, 0 means no.
-0		# option 2b) input for each cell whether or not to use this spinup as inits.  1 means yes, 0 means no. 
+#Seed Availability options
+10		# number of years N at the beginning of the simulation during which seeds are available for germination.  Input: N years.
