--- a/testing.sagebrush.master/Grid_Inputs/grid_setup.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_setup.in
@@ -4,3 +4,4 @@
 1		# use disturbances csv file (0 or 1)... 0 means no, 1 means yes
 1		# use soils csv file (0 or 1)... 0 means no, 1 means yes
 1		# use seed dispersal (0 or 1)... 0 means no, 1 means yes
+spinup  	# Initialization method. Options are "spinup", "seeds", or "none"
