--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -77,28 +77,25 @@
 #		ALSO tested max biomass for ARTR - found 400 worked best but is flexible 200-500 with above irates
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
 
-# name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff  var    pseed
-  artr       1   100 0.10000 0.900    4      3    0.3000   2   2.000  400.00      n       0       2  0.0100     1	 0.0	 0
- trdu       2    1  0.94700 0.900    2       3    0.0300   5   0.035   4.700      n       0       2  0.0000     0    0.0     0
- cryp       2    1  0.94700 0.900    2       3    0.2000   10  0.035   4.700      n       0       2  0.0000     1    0.0001  100
- amre       3    1  0.94700 0.900    2       3    0.0300   5   0.035   4.429      n       0       2  0.0000     0    0.0     0
- chen       3    1  0.94700 0.900    2       2    0.2000   8   0.035   4.429      n       0       1  0.0000     1    0.0001  100
- acmi       4   10  0.42600 0.900    2       3    0.1500   6   0.035   5.000      n       0       2  0.0100     0	 0.0	 0	
- phho       4   10  0.42600 0.900    2       3    0.1500  15   0.035   5.000      n       0       2  0.0100     1	 0.0	 0
- arfr       5    5  0.42600 0.900    2       3    0.1000   5   0.035   7.480      n       0       2  0.0100     1	 0.0	 0
- lipu       5   35  0.42600 0.900    2       3    0.1000   4   0.035   7.480      n       0       2  0.0100     0	 0.0	 0
- brte       6    1  0.94700 0.900    2       3    0.1500   20  0.020   5.000	  n       0       2  0.0000     1	 0.0001  1000
- vuoc       6    1  0.94700 0.900    2       1    0.0300   16  0.020   5.000      n       0       2  0.0000     0    0.0     0
- pssp       7   35  0.47400 0.900    2       3    0.1500   20  0.500  15.096      y       3       2  0.0100     1    0.0     0
- koma       7    5  0.47400 0.900    2       3    0.1500   2   0.500  15.096      y       3       2  0.0100     0    0.0     0
- bogr       8   35  0.47400 0.900    2       2    0.0500   2   0.605  15.096      y       3       1  0.0100     0    0.0     0
- spcr       8   29  0.47400 0.900    2       3    0.0500   3   0.605   6.000      y       0       1  0.0100     1    0.0     0
- gusa       9   35  0.73700 0.900    2       3    0.1500   2   0.986  12.126      n       0       2  0.0100     0    0.0     0
- chvi       9   17  0.47400 0.900    2 		 2    0.1500   2   0.986  70.726      n       0       2  0.0100     1  	 0.0     0
- oppo       10  30  0.28900 0.900    4       4    0.0500   1   2.250   15.00      y       3       1  0.0100     1	 0.0     0
-
-#spp1       7    1  0.94700 0.900    2       3    0.01500   2   0.020   0.429      n       0       2  0.0000     0
-#spp2       7    1  0.94700 0.900    2       3    0.01500   2   0.020   2.126      n       0       2  0.0000     0
+# name   rg   age  slow  disturb  eind  vegindv  tclass  onoff  pseed  clonal   irate   ratep   pestab   minbio    maxbio  cosurv    var
+  artr   1    100    4      3       2      0        2      1        0     n     0.100   0.900    0.30    2.000    400.000   0.01    0.0000  
+  trdu   2      1    2      3       5      0        2      0        0     n     0.947   0.900    0.03    0.035      4.700   0.00    0.0000  
+  cryp   2      1    2      3      10      0        2      1      100     n     0.947   0.900    0.20    0.035      4.700   0.00    0.0001         
+  amre   3      1    2      3       5      0        2      0        0     n     0.947   0.900    0.03    0.035      4.429   0.00    0.0000                           
+  chen   3      1    2      2       8      0        1      1      100     n     0.947   0.900    0.20    0.035      4.429   0.00    0.0001                              
+  acmi   4     10    2      3       6      0        2      0        0     n     0.426   0.900    0.15    0.035      5.000   0.01    0.0000                    
+  phho   4     10    2      3      15      0        2      1        0     n     0.426   0.900    0.15    0.035      5.000   0.01    0.0000                          
+  arfr   5      5    2      3       5      0        2      1        0     n     0.426   0.900    0.10    0.035      7.480   0.01    0.0000                       
+  lipu   5     35    2      3       4      0        2      0        0     n     0.426   0.900    0.10    0.035      7.480   0.01    0.0000                    
+  brte   6      1    2      3      20      0        2      1     1000     n     0.947   0.900    0.15    0.020      5.000   0.00    0.0001        
+  vuoc   6      1    2      1      16      0        2      0        0     n     0.947   0.900    0.03    0.020      5.000   0.00    0.0000 
+  pssp   7     35    2      3      20      3        2      1        0     y     0.474   0.900    0.15    0.500     15.096   0.01    0.0000                                     
+  koma   7      5    2      3       2      3        2      0        0     y     0.474   0.900    0.15    0.500     15.096   0.01    0.0000                                                               
+  bogr   8     35    2      2       2      3        1      0        0     y     0.474   0.900    0.05    0.605     15.096   0.01    0.0000                                                            
+  spcr   8     29    2      3       3      0        1      1        0     y     0.474   0.900    0.05    0.605      6.000   0.01    0.0000                
+  gusa   9     35    2      3       2      0        2      0        0     n     0.737   0.900    0.15    0.986     12.126   0.01    0.0000                    
+  chvi   9     17    2      2       2      0        2      1        0     n     0.474   0.900    0.15    0.986     70.726   0.01    0.0000                          
+  oppo   10    30    4      4       1      3        1      1        0     y     0.289   0.900    0.05    2.250     15.000   0.01    0.0000    
 
 [end]  # this marks the end of the species-specific parameters above
 
