--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup.in
@@ -26,6 +26,13 @@
 #  FIN - output value of final day in the period; soil water variables only.
 # Note that SUM and AVG are the same if timeperiod = dy.
 #
+# (3-Sep-03) OUTSEP key indicates the output separator.  This method
+# allows older files to work with the new version.  The default is a
+# tab.  Other options are 's', 't', or 'c' for space, tab, or comma (no quotes)
+# or any other printable character as itself (eg, :;| etc).  The given
+# separator will apply to all of the output files.  Note that only lowercase
+# letters 's' or 't' are synonyms.
+#
 # (01/17/2013) TIMESTEP key indicates which periods you want to output.
 # You can output all the periods at a time, just one, or however many
 # you want. To change which periods to output type 'dy' for day,
@@ -33,6 +40,7 @@
 # in any order. For example: 'TIMESTEP mo wk' will output for month and week
 #
 
+OUTSEP c
 TIMESTEP dy mo yr # must be lowercase
 
 #         KEY     SUMTYPE   PERIOD   START END FILENAME_PREFIX      DESCRIPTION
@@ -61,5 +69,6 @@ TIMESTEP dy mo yr # must be lowercase
       DEEPSWC     SUM       MO       1     end      deep_drain      /* deep drainage into lowest layer (cm) */
      SOILTEMP     AVG       MO       1     end       temp_soil      /* soil temperature from each soil layer (in celsius) */
        ESTABL     OFF       YR       1     end          estabs      /* yearly establishment results */
-   CO2EFFECTS     AVG       DY       1     end      vegetation      /* vegetation biomass: biomass (g/m2) for grasses, shrubs, trees, forbs, and total; live biomass (g/m2) fgrasses, shrubs, trees, forbs, and total; biomass CO2-effect (multiplier) for grasses, shrubs, trees, and forbs; WUE CO2-effect (multiplier) for grasses, shrubs, trees, and forbs
+   CO2EFFECTS     AVG       DY       1     end      co2effects      /* vegetation CO2-effect (multiplier) for trees, shrubs, forbs, grasses; WUE CO2-effect (multiplier) for trees, shrubs, forbs, grasses */
+      BIOMASS     AVG       DY       1     end      vegetation      /* vegetation: cover (%) for trees, shrubs, forbs, grasses; biomass (g/m2 as component of total) for total, trees, shrubs, forbs, grasses, and litter; live biomass (g/m2 as component of total) total, trees, shrubs, forbs, grasses */
 
