Update to SOILWAT2 v5.2.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sw_src"]
 	path = sw_src
 	url = https://github.com/DrylandEcology/SOILWAT2.git
-	branch = enhancement_262_biomassunits
+	branch = master
         ignore = dirty
