(issue #344) moved VW to species.in.
This commit looks bigger than it actually is because I fixed some formatting issues along the way. The only real changes I made were adding a VW field to the species struct, initializing this field in _species_init, and used it in _read_seed_dispersal_in.

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -173,29 +173,30 @@
 # Pmax = probability of producing seeds in a wet year
 # H = the average release height of the inflorescences (cm) 
 # VT = the average sinking velocity of the seeds (cm/sec)
+# VW - the mean horizontal wind speed (500 cm/sec in the paper)
 #
 # name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	VT
- artr	1		0.5	105	520	0.01	0.55	30.0	100.0 
- trdu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- cryp 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- amre 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- chen 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- acmi 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- phho 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- arfr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- lipu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- brte 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- pssp 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- koma 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- bogr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- spcr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- gusa 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- chvi 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- oppo 	1		0.5	105	520	0.01	0.55	30.0	100.0
+ artr	1	    0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ trdu 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0		
+ cryp 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ amre 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ chen 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ acmi 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ phho 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ arfr 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ lipu 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ brte 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ pssp 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ koma 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ bogr 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ spcr 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ gusa 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ chvi 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+ oppo 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
 
-#spp1 	1		0.5	105	520	0.01	0.55	30.0	100.0 
-#spp2 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+#spp1 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
+#spp2 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
 
 [end]	# this marks the end of the seed-dispersal parameters
 
