--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -175,7 +175,7 @@
 # VT = the average sinking velocity of the seeds (cm/sec)
 # VW - the mean horizontal wind speed (500 cm/sec in the paper)
 #
-# name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	VT
+# name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	VT  VW
  artr	1	    0.5	105	520	0.01	0.55	30.0	100.0   500.0
  trdu 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0		
  cryp 	1		0.5	105	520	0.01	0.55	30.0	100.0   500.0
