--- a/testing.sagebrush.master/Grid_Inputs/grid_setup.in
+++ b/testing.sagebrush.master/Grid_Inputs/grid_setup.in
@@ -5,4 +5,9 @@
 1		# use soils csv file (0 or 1)... 0 means no, 1 means yes
 0		# use seed dispersal (0 or 1)... 0 means no, 1 means yes
 spinup  	# Initialization method. Options are "spinup", "seeds", or "none"
-300    # Number of years to perform initialization. 
+300    # Number of years to perform initialization (whichever method you choose). 
+
+#SEED DISPERSAL OUTPUTS
+1		# output seed dispersal summary file?  1 means yes, 0 means no
+1		# output header?  1 means yes, 0 means no.
+,		# output seperator. Valid options are: t = tab, s = space, or any single character such as , | : etc (excluding '#','t', and 's').  Suggested: tab.
