--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -14,9 +14,9 @@
 # name = a name to give the group (12 chars)
 # space = proportion of the resource space used by the group.
 #         this must sum to 1.0
-# density = relative number of mature individuals per plot, reassigned to max_density in the model code
-# maxest = maximum species that can establish in a given year, 
-#          this value cannot be greater than the number of species assigned 
+# density = number of mature individuals per square-meter, converted to `max_density` (in units of plants per plot) in the model code
+# maxest = maximum species that can establish in a given year,
+#          this value cannot be greater than the number of species assigned
 #          to the resource group in the species.in file
 # slow = slow growth rate, defines when to count stretched years
 # stretch  = max yrs resources can be stretched before low-resource mortality occurs.
