(Issue #371) Implement Google Test on STEPWAT2
Includes test/test.cc which tests that Google Test is working. Will remove test/test.cc later.

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,9 @@ Thumbs.db
 *outsetup_v30.in
 testing_shortegrass/
 stepwat
+stepwat_test
 stepwat.dSYM/
+stepwat_test.dSYM/
 testing/stepwat
 testing/valgrind.out
 testing/stepwat.dSYM/
