--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -50,7 +50,7 @@
 #       along with the mean (pestab), is used to calculate the two shape parameters: alpha and beta. 
 #       Default value: 0.0001. NOTE: var must be < pestab * (1-pestab) or alpha and/or beta will be negative,
 #       we will no longer be meeting the assumptions of a beta distribution, and the code will fail.
-# pseed = the average number of seeds produced by annual species per 1g of biomass, per 1m^2 and per year.
+# pseed = the average number of seeds produced by annual species per 1g of biomass, per 1m^2 and per year (internally re-calculated as seeds per 1 g biomass per plot and per year)
 
 ###PARAMETER SOURCES     
 #TM - eind values are density values taken from Adler datasets from Idaho. Species vuoc (1090), bogr, spcr, brar (2080), are from Karl et al 1999
@@ -78,21 +78,21 @@
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
 
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff  var    pseed
-  artr       1   100 0.10000 0.900    4      3    0.3000   2   2.000  400.00      n       0       2  0.0100     1	 0.0	 0
+  artr       1   100 0.35000 0.900    4      3    0.1500   1   2.000  1000.00      n       0       2  0.0100     1	 0.0	 0
  trdu       2    1  0.94700 0.900    2       3    0.0300   5   0.035   4.700      n       0       2  0.0000     0    0.0     0
  cryp       2    1  0.94700 0.900    2       3    0.2000   10  0.035   4.700      n       0       2  0.0000     1    0.0001  100
  amre       3    1  0.94700 0.900    2       3    0.0300   5   0.035   4.429      n       0       2  0.0000     0    0.0     0
  chen       3    1  0.94700 0.900    2       2    0.2000   8   0.035   4.429      n       0       1  0.0000     1    0.0001  100
  acmi       4   10  0.42600 0.900    2       3    0.1500   6   0.035   5.000      n       0       2  0.0100     0	 0.0	 0	
- phho       4   10  0.42600 0.900    2       3    0.1500  15   0.035   5.000      n       0       2  0.0100     1	 0.0	 0
+ phho       4   10  0.42600 0.900    2       3    0.1500  15   0.035   22.000      n       0       2  0.0100     1	 0.0	 0
  arfr       5    5  0.42600 0.900    2       3    0.1000   5   0.035   7.480      n       0       2  0.0100     1	 0.0	 0
  lipu       5   35  0.42600 0.900    2       3    0.1000   4   0.035   7.480      n       0       2  0.0100     0	 0.0	 0
  brte       6    1  0.94700 0.900    2       3    0.1500   20  0.020   5.000	  n       0       2  0.0000     1	 0.0001  1000
  vuoc       6    1  0.94700 0.900    2       1    0.0300   16  0.020   5.000      n       0       2  0.0000     0    0.0     0
  pssp       7   35  0.47400 0.900    2       3    0.1500   20  0.500  15.096      y       3       2  0.0100     1    0.0     0
  koma       7    5  0.47400 0.900    2       3    0.1500   2   0.500  15.096      y       3       2  0.0100     0    0.0     0
- bogr       8   35  0.47400 0.900    2       2    0.0500   2   0.605  15.096      y       3       1  0.0100     0    0.0     0
- spcr       8   29  0.47400 0.900    2       3    0.0500   3   0.605   6.000      y       0       1  0.0100     1    0.0     0
+ bogr       8   35  0.47400 0.900    2       2    0.0500   20   0.605  15.096     y       3       1  0.0100     1    0.0     0
+ spcr       8   29  0.47400 0.900    2       3    0.0500   3   0.605   6.000      y       0       1  0.0100     0    0.0     0
  gusa       9   35  0.73700 0.900    2       3    0.1500   2   0.986  12.126      n       0       2  0.0100     0    0.0     0
  chvi       9   17  0.47400 0.900    2 		 2    0.1500   2   0.986  70.726      n       0       2  0.0100     1  	 0.0     0
  oppo       10  30  0.28900 0.900    4       4    0.0500   1   2.250   15.00      y       3       1  0.0100     1	 0.0     0
