--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
@@ -1,10 +1,10 @@
 # sxw prod definition file STEPPEWAT
-
-#Production Coefficients for STEPWAT
+# Production Coefficients for STEPWAT
 
 # These values are used to convert yearly biomass
 # from STEPPE to monthly production values for SOILWAT
 
+######################### LITTER ###########################
 # LITTER - use the maximum value from the converted biomass 
 #          to multiply by this number to compute a litter 
 #          value in g/m^2.  Needn't sum to 1.0.
@@ -12,19 +12,18 @@
 # PCT_LIVE - RGroups pct live each month is used to calc
 #            VegProdTypes pct live for soilwat.
 
-# LITTER 
-0.75    # January            
-0.80    # February          
-0.85    # March            
-0.75    # April            
-0.36    # May            
-0.31    # June            
-0.28    # July            
-0.29    # August            
-0.38    # September            
-0.46    # October            
-0.58    # November            
-0.68    # December
+# Group		Jan	Feb	Mar	Apr	May	Jun	Jul	Aug	Sep	Oct	Nov	Dec
+sagebrush	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+a.cool.forb	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+a.warm.forb	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+p.cool.forb	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+p.warm.forb	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+a.cool.grass	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+p.cool.grass	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+p.warm.grass	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+shrub		0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+succulents	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
+#a.warm.grass	0.75	0.80	0.85	0.75	0.36	0.31	0.28	0.29	0.38	0.46	0.58	0.68
 
 [end]  # section end
 
