Added Pmd to species.in and SpeciesType, changed parameter, continued documenting.
(issue #416)
* Added Pmd to species.in and added a corresponding variable to the SpeciesType struct.
* In SpeciesType the variable is called maxDispersalProbability to make it easy to read.

(issue #420)
* I documented the _cell_dist function in ST_seedDispersal.c.

(issue #417)
* I changed MAXD for artr to 30.0 meters.

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -171,29 +171,30 @@
 # Pmax = probability of producing seeds in a wet year
 # H = the average release height of the inflorescences (cm)
 # MAXD = The maximum distance, in meters, a seed can travel.
+# PMD = Probability of Maximum Dispersal. The probability that a seed disperses MAXD meters
 #
-# name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	MAXD
- artr	1	    0.5	105	520	0.01	0.55	30.0	3.0
- trdu 	1		0.5	105	520	0.01	0.55	30.0	3.0
- cryp 	1		0.5	105	520	0.01	0.55	30.0	3.0
- amre 	1		0.5	105	520	0.01	0.55	30.0	3.0
- chen 	1		0.5	105	520	0.01	0.55	30.0	3.0
- acmi 	1		0.5	105	520	0.01	0.55	30.0	3.0
- phho 	1		0.5	105	520	0.01	0.55	30.0	3.0
- arfr 	1		0.5	105	520	0.01	0.55	30.0	3.0
- lipu 	1		0.5	105	520	0.01	0.55	30.0	3.0
- brte 	1		0.5	105	520	0.01	0.55	30.0	3.0
- vuoc 	1		0.5	105	520	0.01	0.55	30.0	3.0
- pssp 	1		0.5	105	520	0.01	0.55	30.0	3.0
- koma 	1		0.5	105	520	0.01	0.55	30.0	3.0
- bogr 	1		0.5	105	520	0.01	0.55	30.0	3.0
- spcr 	1		0.5	105	520	0.01	0.55	30.0	3.0
- gusa 	1		0.5	105	520	0.01	0.55	30.0	3.0
- chvi 	1		0.5	105	520	0.01	0.55	30.0	3.0
- oppo 	1		0.5	105	520	0.01	0.55	30.0	3.0
+# name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	MAXD	PMD
+ artr	1	    0.5	105	520	0.01	0.55	30.0	30.0	0.005
+ trdu 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ cryp 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ amre 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ chen 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ acmi 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ phho 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ arfr 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ lipu 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ brte 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ vuoc 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ pssp 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ koma 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ bogr 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ spcr 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ gusa 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ chvi 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+ oppo 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
 
-#spp1 	1		0.5	105	520	0.01	0.55	30.0	3.0
-#spp2 	1		0.5	105	520	0.01	0.55	30.0	3.0
+#spp1 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
+#spp2 	1		0.5	105	520	0.01	0.55	30.0	3.0	0.005
 
 [end]	# this marks the end of the seed-dispersal parameters
 
